# clawbank

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  BUILD_BIBLE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  security.yml
config/: openclaw-example.yaml
contracts/: AgentTreasury.sol
contracts/test/: AgentTreasury.t.sol
examples/: test_okx_api.rs
foundry-deploy/script/: Deploy.s.sol
foundry-deploy/src/: AgentTreasury.sol
scripts/: agent-sim.ps1  e2e-anvil.ps1  e2e-trade-test.ps1  macd-bot.ps1  test-mcp.ps1
src/: banker.rs  dashboard.rs  guardian.rs  lib.rs  main.rs  monitor.rs  types.rs
src/execution/: mod.rs  okx_cex.rs  okx_onchain.rs  okx_rest.rs  treasury.rs  x402.rs
src/mcp/: skill.rs
tests/: banker_tests.rs  guardian_tests.rs  mcp_tests.rs  treasury_e2e.rs  x402_tests.rs
