[package]
name = "openclaw-aibank"
version = "0.1.0"
edition = "2021"
description = "Supervised agentic trading system — OpenClaw agents borrow from a treasury, trade via OKX, monitored by a guardian"
license = "MIT"

[[bin]]
name = "openclaw-aibank"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
futures = "0.3"
tokio-tungstenite = "0.21"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
